VPCNet_Stack_Template.yaml
Description:  Creates a VPC with 1 Public Subnet, 3 Private Subnets (ResearchTeam, ClientTeam, Misc., Services) and a Site to Site VPN Connection (for on-prem)

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: Network

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Internet Subnet (Public)
    Type: String
    Default: 10.0.0.0/24

  ClientTeamSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Client Team Subnet (Private)
    Type: String
    Default: 10.0.1.0/24

  ResearchTeamSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Research Team Subnet (Private)
    Type: String
    Default: 10.0.2.0/24

  MiscSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Misc. Subnet (Private)
    Type: String
    Default: 10.0.3.0/24
  
  ServicesSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Services Subnet (Private)
    Type: String
    Default: 10.0.4.0/24

  ThePreSharedKey:
    Description: The Preshared Key for the Site to Site VPN Connection
    Type: String
    Default: ChangeMePlease

Resources:
# General VPC/Network Configuration:
# VPC Configuration
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Internet Gateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} NAT Gateway EIP

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} NAT Gateway
  
# Route Tables    
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  
# Route Table Associations
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  
  ClientTeamSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ClientTeamSubnet

  ResearchTeamSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ResearchTeamSubnet
 
  MiscSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref MiscSubnet

  ServicesSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ServicesSubnet

# Subnet Defintions
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Internet Subnet
  
  ClientTeamSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref ClientTeamSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Client Team Subnet
  
  ResearchTeamSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref ResearchTeamSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} ResearchTeam Subnet
  
  MiscSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref MiscSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Misc. Subnet

  ServicesSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref ServicesSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Services Subnet

# Network Access Control Lists (NACLs):
# Client Team Subnet NACLs
  ClientTeamSubnetNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
       VpcId: !Ref VPC
       Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Client Team Subnet NACL
  
  ClientTeamSubnetNACLAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref ClientTeamSubnetNACL
      SubnetId: !Ref ClientTeamSubnet

  # Inbound
  ClientTeamSubnetInboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref ResearchTeamSubnetCIDR

  ClientTeamSubnetInboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref MiscSubnetCIDR

  ClientTeamSubnetInboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: Allow
        Egress: false
        CidrBlock: 0.0.0.0/0

  # Outbound
  ClientTeamSubnetOutboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref ResearchTeamSubnetCIDR

  ClientTeamSubnetOutboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref MiscSubnetCIDR

  ClientTeamSubnetOutboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ClientTeamSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: allow
        Egress: true
        CidrBlock: 0.0.0.0/0
  # End of Client Team Subnet NACLs

# Research and Development Subnet NACLs
  ResearchTeamSubnetNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
       VpcId: !Ref VPC
       Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Research and Development Subnet NACL
  
  ResearchTeamSubnetNACLAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref ResearchTeamSubnetNACL
      SubnetId: !Ref ResearchTeamSubnet

  # Inbound
  ResearchTeamSubnetInboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref ClientTeamSubnetCIDR

  ResearchTeamSubnetInboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref MiscSubnetCIDR

  ResearchTeamSubnetInboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: Allow
        Egress: false
        CidrBlock: 0.0.0.0/0

  # Outbound
  ResearchTeamSubnetOutboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref ClientTeamSubnetCIDR

  ResearchTeamSubnetOutboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref MiscSubnetCIDR

  ResearchTeamSubnetOutboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref ResearchTeamSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: allow
        Egress: true
        CidrBlock: 0.0.0.0/0
  # End of Research and Development Subnet NACLs

# Misc Subnet NACLs
  MiscSubnetNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
       VpcId: !Ref VPC
       Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Misc Subnet NACL
  
  MiscSubnetNACLAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref MiscSubnetNACL
      SubnetId: !Ref MiscSubnet

  # Inbound
  MiscSubnetInboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref ClientTeamSubnetCIDR

  MiscSubnetInboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: Deny
        Egress: false
        CidrBlock: !Ref ResearchTeamSubnetCIDR

  MiscSubnetInboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: Allow
        Egress: false
        CidrBlock: 0.0.0.0/0

  # Outbound
  MiscSubnetOutboundNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 100
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref ClientTeamSubnetCIDR

  MiscSubnetOutboundNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 101
        Protocol: -1
        RuleAction: deny
        Egress: true
        CidrBlock: !Ref ResearchTeamSubnetCIDR

  MiscSubnetOutboundNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
        NetworkAclId: !Ref MiscSubnetNACL
        RuleNumber: 999
        Protocol: -1
        RuleAction: allow
        Egress: true
        CidrBlock: 0.0.0.0/0
  # End of Misc Subnet NACLs


# Security Groups:
# Internet Security Groups
  InternetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Internet Security Group
        GroupName: !Sub ${EnvironmentName} Internet Security Group
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Internet Security Group
        SecurityGroupIngress:
        # Allowing SSH from the VPC Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCIDR
        # Allowing SSH from the WireGuard Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/8
        # Allowing RDP from the VPC Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref VpcCIDR
        # Allowing UDP 23917 anywhere (Wireguard)
        - IpProtocol: udp
          FromPort: 23917
          ToPort: 23917
          CidrIp: 0.0.0.0/0
        # Allow ICMP from the VPC Subnet
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCIDR
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
        # Allowing SSH on Wireguard backup port
        - IpProtocol: tcp
          FromPort: 8722
          ToPort: 8722
          CidrIp: 0.0.0.0/0
        # Allow all outbound
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0

# Services Security Groups
  ServicesSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Services Security Group
        GroupName: !Sub ${EnvironmentName} Services Security Group
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Services Security Group
        SecurityGroupIngress:
        # Allowing HTTP anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # Allowing HTTPS anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # Allowing SSH from the VPC Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VpcCIDR
        # Allowing SSH from the WireGuard Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/8
        # Allowing RDP from the VPC Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref VpcCIDR
        # Allow ICMP from the VPC Subnet
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCIDR
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
        # Allow all outbound
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0

# Client Team Security Groups
  ClientTeamSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Client Team Security Group
        GroupName: !Sub ${EnvironmentName} Client Team Security Group
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Client Team Security Group
        SecurityGroupIngress:
        # Allowing HTTP anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # Allowing HTTPS anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # Allowing ALL for Client Team Subnet
        - IpProtocol: -1
          CidrIp: !Ref ClientTeamSubnetCIDR
        # Allowing SSH for Internet Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing SSH for Services Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ServicesSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref ServicesSubnetCIDR
        # Allow ICMP from the VPC Subnet
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCIDR
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
        # Allow all outbound
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0

# Research and Development Security Group
  ResearchTeamSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Research and Development Security Group
        GroupName: !Sub ${EnvironmentName} Research and Development Security Group
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Research and Development Security Group
        SecurityGroupIngress:
        # Allowing HTTP anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # Allowing HTTPS anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # Allowing ALL for Research and Development Subnet
        - IpProtocol: -1
          CidrIp: !Ref ResearchTeamSubnetCIDR
        # Allowing SSH for Internet Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing SSH for Services Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ServicesSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref ServicesSubnetCIDR
        # Allow ICMP from the VPC Subnet
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCIDR
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
        # Allow all outbound
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0


# Misc Security Group
  MiscSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Misc Security Group
        GroupName: !Sub ${EnvironmentName} Misc Security Group
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Misc Security Group
        SecurityGroupIngress:
        # Allowing HTTP anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # Allowing HTTPS anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        # Allowing ALL for Misc Subnet
        - IpProtocol: -1
          CidrIp: !Ref MiscSubnetCIDR
        # Allowing SSH for Internet Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref PublicSubnetCIDR
        # Allowing SSH for Services Subnet
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ServicesSubnetCIDR
        # Allowing RDP for Internet Subnet
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref ServicesSubnetCIDR
        # Allow ICMP from the VPC Subnet
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcCIDR
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
        # Allow all outbound
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0

#Additional Network Configurations:
# S2S VPN Configuration
  VPNCustomerGateway:
    Type: AWS::EC2::CustomerGateway
    Properties:
      Type: ipsec.1
      BgpAsn: 65000
      IpAddress: 50.242.213.253
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} VPN Customer Gateway

  VPNGateway:
    Type: AWS::EC2::VPNGateway
    Properties:
      Type: ipsec.1
      Tags: 
        - Key: Name
          Value: !Sub ${EnvironmentName} VPN Gateway

  VPNGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
        VpnGatewayId: !Ref VPNGateway
        VpcId: !Ref VPC

  VPNConnection:
    Type: AWS::EC2::VPNConnection
    Properties:
      Type: ipsec.1
      CustomerGatewayId: !Ref VPNCustomerGateway
      StaticRoutesOnly: True
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} VPN Connection
      VpnGatewayId: !Ref VPNGateway
      VpnTunnelOptionsSpecifications: 
        - PreSharedKey: !Ref ThePreSharedKey


Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Ref PublicSubnet

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref ClientTeamSubnet, !Ref ResearchTeamSubnet, !Ref ServicesSubnet, !Ref MiscSubnet]]

  PublicSubnet:
    Description: A reference to the Internet Subnet
    Value: !Ref PublicSubnet

  ClientTeamSubnet:
    Description: A reference to the Client Team Subnet
    Value: !Ref ClientTeamSubnet

  ResearchTeamSubnet:
    Description: A reference to the ResearchTeam Subnet
    Value: !Ref ResearchTeamSubnet

  MiscSubnet:
    Description: A reference to the Misc. Subnet
    Value: !Ref MiscSubnet
  
  ServicesSubnet:
    Description: A reference to the Services Subnet
    Value: !Ref ServicesSubnet
